--- a/src/pages/test-map/test-map.pug
+++ b/src/pages/test-map/test-map.pug
@@ -141,6 +141,7 @@ block content
                               li.mark-places__list-item Магазин
           .map-col.map-wrapper__map
               #map
+
       .map-others
           <input type="button" id="destroyButton" value="Удалить карту"/>
           ul.coord-list 
@@ -165,3 +166,5 @@ block content
                   .mark-phone__link
                       a(href="tel:375296170973") +375 29 617-09-73
 
+
+    script(src='https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<ваш API-ключ>' type='text/javascript')
